--- a/index.html
+++ b/index.html
@@ -386,19 +386,19 @@
             <p><a target="_blank" rel="nofollow"  href="https://freeradius.org">FREERADIUS</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://dmasoftlab.com">DMA Radius Manager</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://billingku.net">Billingku</a></p>
-            <p><a target="_blank" rel="nofollow"  href="https://laksa19.github.io/">Mikhmon Billing Hotspot</a></p>
-            <p><a target="_blank" rel="nofollow"  href="https://sarang.web.id">Billing Hotspot Sarang-Net</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://laksa19.github.io">Mikhmon Billing Hotspot</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://sarang.my.id">Billing Hotspot Sarang-Net</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://topsetting.com">MIXRadius</a></p>
-            <p><a target="_blank" rel="nofollow"  href="https://rlradius.id/">RL-Radius</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://rlradius.id">RL-Radius</a></p>
           </div>
           <div class="column">
-		  <p><a target="_blank" rel="nofollow"  href=" https://radiusku.net/">Radiusku</a></p>
+		  <p><a target="_blank" rel="nofollow"  href=" https://radiusku.net">Radiusku</a></p>
             <p><a target="_blank" rel="nofollow"  href=" https://sourceforge.net/projects/the-userman">TheUserman</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://github.com/ibnux/phpmixbill">PHPMixBill</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://github.com/aviantorichad/MIKROSTATOR">MIKROSTATOR</a></p>
             <p><a target="_blank" rel="nofollow"  href="https://mikbotam.net">MIKBOTAM</a></p>
-            <p><a target="_blank" rel="nofollow"  href="https://www.radboox.com/">RadbooX</a></p>
-            <p><a target="_blank" rel="nofollow"  href="https://www.daloradius.com/">Daloradius</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://www.radboox.com">RadbooX</a></p>
+            <p><a target="_blank" rel="nofollow"  href="https://www.daloradius.com">Daloradius</a></p>
           </div>
         </div>
         <h2>OTHER MIKROTIK BATCH TOOLS</h2>
