--- a/login/index.html
+++ b/login/index.html
@@ -38,8 +38,8 @@
           <span style="font-weight:bold; font-size:20px; color:#fff"><span id="profile-email" style="color:#292929"></span></span>
           <br><br>
           <span style="font-weight:bold; font-size:13px">E-MAIL AUTH <span style="margin-left:37px;margin-right:6px">:</span><span id="email_Verified"></span></span> <button id="verify" style="width:100px !important; padding:5px; margin-left:5px; font-weight:bold;font-size:14px; background-color:red">Verify E-Mail</button><br><br>
-          <span style="font-weight:bold;font-size:13px">E-MAIL IDENTIFIER <span style="margin-left:4px; margin-right:6px">:</span><span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
-          <span style="font-weight:bold; font-size:13px">USER UID <span style="margin-left:63px;margin-right:6px">:</span><span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
+          <span style="font-weight:bold;font-size:13px">E-MAIL IDENTIFIER <span style="margin-left:4px; margin-right:6px">:</span><span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="display:none; font-weight:bold; font-size:13px">USER UID <span style="margin-left:63px;margin-right:6px">:</span><span style="color:#ff6600;font-weight:bold;" id="user-id"></span></span><br><br>
           <span style="font-weight:bold; font-size:13px">YOUR NAME <span style="margin-left:45px;margin-right:6px">:</span><span style="color:#ff6600;font-weight:bold;" id="your-name"></span></span>
           <br><br>
           <button  id="back-home" onclick="history.back()">⬅ Back</button>
