--- a/login/maintenance.html
+++ b/login/maintenance.html
@@ -18,8 +18,8 @@
 <article>
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:#">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; The Team</p>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="https://www.facebook.com/buananetmikrotik">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+        <p>&mdash; buananetpbun.github.io</p>
     </div>
 </article>
 </body>
