--- a/login/maintenance.html
+++ b/login/maintenance.html
@@ -19,6 +19,7 @@
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="https://www.facebook.com/buananetmikrotik">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+        <p>Maaf atas ketidaknyamanan ini, kami sedang melakukan beberapa pemeliharaan saat ini. Jika perlu, Anda selalu dapat <a href="https://www.facebook.com/buananetmikrotik">menghubungi kami</a>, jika tidak, kami akan segera kembali online!</p>		
         <p>&mdash; buananetpbun.github.io</p>
     </div>
 </article>
