--- a/login/maintenance.html
+++ b/login/maintenance.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8"/>
 <meta name="robots" content="noindex"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
 <style>
   body { text-align: center; padding: 150px; }
   h1 { font-size: 50px; }
