--- a/login/maintenance.html
+++ b/login/maintenance.html
@@ -9,7 +9,7 @@
 <style>
   body { text-align: center; padding: 150px; }
   h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
+  body { font: 18px Helvetica, sans-serif; color: #333; }
   article { display: block; text-align: left; width: 650px; margin: 0 auto; }
   a { color: #dc8100; text-decoration: none; }
   a:hover { color: #333; text-decoration: none; }
@@ -23,6 +23,7 @@
         <p>Maaf atas ketidaknyamanan ini, kami sedang melakukan beberapa pemeliharaan saat ini. Jika perlu, Anda selalu dapat <a href="https://www.facebook.com/buananetmikrotik">menghubungi kami</a>, jika tidak, kami akan segera kembali online!</p>		
         <p>&mdash; buananetpbun.github.io</p>
     </div>
+	<a href="https://buananetpbun.github.io"><< Back Home</a>
 </article>
 </body>
 </html>
