--- a/login/maintenance.html
+++ b/login/maintenance.html
@@ -23,7 +23,7 @@
         <p>Maaf atas ketidaknyamanan ini, kami sedang melakukan beberapa pemeliharaan saat ini. Jika perlu, Anda selalu dapat <a href="https://www.facebook.com/buananetmikrotik">menghubungi kami</a>, jika tidak, kami akan segera kembali online!</p>		
         <p>&mdash; buananetpbun.github.io</p>
     </div>
-	<a href="https://buananetpbun.github.io"><< Back Home</a>
+	<a href="https://buananetpbun.github.io"><< back home</a>
 </article>
 </body>
 </html>
