--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -144,7 +144,7 @@
             We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
           </div>
 		<div style="clear:both"></div>
-        <img style="margin-top:0px; margin-bottom:10px" src="./img/hide-info.png" alt="Italian Trulli">
+        <img style="margin-top:0px; margin-bottom:10px" src="https://github-production-user-asset-6210df.s3.amazonaws.com/42666125/263483744-844b89ff-48e1-4c81-baea-e042c5864a3c.png" alt="mikrotik ninja">
         <div class="class-input">
           <div style="width:100%;margin-right:10px">
             <label><b>Interface (ether) to ISP</b></label><br>
