--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" >
     <meta property="og:title" content="Free MikroTik RouterOS Online Tools Generator - BuanaNETPBun.Github.io">
     <meta property="og:description" content="Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts from BuanaNETPBun.Github.io">
-    <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/157738242-2c4de210-d8b6-4f7c-ab3a-b420ab3835ec.png">
+    <meta property="og:image" content="https://github-production-user-asset-6210df.s3.amazonaws.com/42666125/264943645-711122b2-46e4-4d56-93a6-163e5c14b625.png">
     <meta property="og:image:alt" content="BuanaNETPBun.Github.io">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io">
