--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Free MikroTik RouterOS Online Tools Generator - BuanaNETPBun.Github.io</title>
     <meta content='Free MikroTik RouterOS Online Tools Generator, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
       By BuanaNETPBun.Github.io' name='description'>
-    <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
+    <meta content='mikrotik, router os, tools, load balancing, queue, vpn, routing, winbox, termimal, rsc, script, hotspot, wireless, mangle, nat' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="https://buananetpbun.github.io/img/apple-touch-icon.png">
