--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -5,7 +5,7 @@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport' >
     <title>Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator - BuanaNETPBun.Github.io' name='description' >
-    <meta content='expired, isolation, pppoe, port knocking, knock, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords' >
+    <meta content='expired, isolation, pppoe, proxy, generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless' name='keywords' >
     <meta content='index, follow, noodp' name='robots' >
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator By BuanaNET-Pbun">
