--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Advanced Mikrotik Router-OS Protection - BuanaNETPBun.Github.io</title>
     <meta content='Advanced Mikrotik Router-OS Protection - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, protection' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Advanced Mikrotik Router-OS Protection By BuanaNET-Pbun">
