--- a/ecmp.html
+++ b/ecmp.html
@@ -5,7 +5,7 @@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
     <title>Load Balancing ECMP Script Generator - BuanaNETPBun.Github.io</title>
     <meta content='Load Balancing ECMP Script Generator For Mikrotik Routeros' name='description' >
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, ecmp' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Load Balancing ECMP Script Generator By BuanaNET">
