--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik RouterOS Auto Backup to E-Mail - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik RouterOS Auto Backup to E-Mail Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
+    <meta content='backup, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik RouterOS Auto Backup to E-Mail Generator By BuanaNET-Pbun">
