--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Block Sharing Hotspot Or Local Connections With Change TTL - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik Block Sharing Hotspot Or Local Connections With Change TTL Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
-    <meta content='hotspot, block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Block Sharing Hotspot Or Local Connections With Change TTL By BuanaNET-Pbun">
