--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Bonding Interface / Link Aggregation Generator - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik Bonding Interface / Link Aggregation Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
-    <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Bonding Interface / Link Aggregation Generator By BuanaNET-Pbun">
