--- a/mikrotik-dhcp-rogue.html
+++ b/mikrotik-dhcp-rogue.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DHCP Alert: DHCP Rogue / Discover Unknown DHCP Server - BuanaNETPBun.Github.io</title>
     <meta content='DHCP Alert: DHCP Rogue / Discover Unknown DHCP Server - BuanaNETPBun.Github.io' name='description'>
-    <meta content='DHCP, Rogue, bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='DHCP, Rogue, bridge, generator, mikrotik, router, winbox, termimal, rsc, scripts' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="DHCP Alert: DHCP Rogue / Discover Unknown DHCP Server By BuanaNET-Pbun">
