--- a/mikrotik-dns-over-https-doh.html
+++ b/mikrotik-dns-over-https-doh.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik DNS over HTTPS (DoH) Server Generator - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik DNS over HTTPS (DoH) Server Script Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='dns, doh, DNS over HTTPS, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik DNS over HTTPS (DoH) Server Generator By BuanaNET-Pbun">
