--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Failover Script Generator - Recursive, Check Gateway, Netwatch Ping - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik Failover with Check Gateway, Recursive and Netwatch Script Generator' name='description'>
-    <meta content='failover, recursive, check gateway, netwatch, script generator, mikrotik, LB, PCC, load balancing, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='failover, recursive, check gateway, netwatch, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Failover Script Generator By BuanaNET-Pbun">
