--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik Free Hotspot Wi-Fi QR Code Generator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik Free Hotspot Wi-Fi QR Code Script Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
+    <meta content='qr code, scan, hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, wifi' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik Free Hotspot Wi-Fi QR Code Generator By BuanaNET-Pbun">
