--- a/nth.html
+++ b/nth.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Load Balancing NTH (LB NTH) Mikrotik Script Generator - BuanaNETPBun.Github.io</title>
     <meta content='Load Balancing NTH (LB NTH) Mikrotik Script Generator' name='description'>
-    <meta content='script generator, mikrotik, LB, NTH, load balancing, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='script generator, mikrotik, LB, NTH, load balancing, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Load Balancing NTH (LB NTH) Script Generator By BuanaNET-Pbun">
