--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik LB PCC / Load Balancing PCC Calculation - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik LB PCC / Load Balancing PCC Calculation - BuanaNETPBun.Github.io' name='description'>
-    <meta content=', load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='load balancing, pcc, lb, calculator, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik LB PCC / Load Balancing PCC Calculation By BuanaNET-Pbun">
