--- a/pcc.html
+++ b/pcc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Load Balancing PCC (LB PCC) Script Generator - BuanaNETPBun.Github.io</title>
     <meta content='Load Balancing (LB) PCC Script Generator ' name='description'>
-    <meta content='script generator, mikrotik, LB, PCC, load balancing, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='script generator, mikrotik, lb pcc, PCC, load balancing, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Load Balancing PCC (LB PCC) Script Generator By BuanaNET-Pbun">
