--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik: Website IP Static Routing (Policy Based Routing) Generator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik: Policy Based Routing (PBR) or Static Routing Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='Policy Based Routing, pbr, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik: Website IP Static Routing (Policy Based Routing) Generator By BuanaNET-Pbun">
