--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning - BuanaNETPBun.Github.io' name='description'>
-    <meta content='bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='mikrotik ninja, isp, wan, script, generator, mikrotik, router, winbox, termimal, rsc' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Ninja: Hide Routerboard Info From ISP / WAN Scanning By BuanaNET-Pbun">
