--- a/mikrotik-mangle-script-obfuscator.html
+++ b/mikrotik-mangle-script-obfuscator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Firewall Mangle Chain Obfuscator Encryption - Buananetpbun.Github.io</title>
     <meta content='Mikrotik Firewall Mangle Chain Obfuscator Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
-    <meta content='hotspot, block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='obfuscator, mangle, firewall, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Firewall Mangle Chain Obfuscator Encryption By Buananetpbun.Github.io">
