--- a/mikrotik-netwatch-monitoring.html
+++ b/mikrotik-netwatch-monitoring.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik: Send Netwatch Monitoring To Telegram, Whatsapp, SMS, E-Mail Generator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik: Send Netwatch Monitoring To Telegram, Whatsapp, SMS, E-Mail Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
-    <meta content='block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='Netwatch Monitoring, telegram, whatsapp, sms, email, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik: Send Netwatch Monitoring To Telegram, Whatsapp, SMS, E-Mail Generator By BuanaNET-Pbun">
