--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik PCQ Burst Rate + Queue Size Calculator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik PCQ Burst Rate, Queue Size, Total Queue size Calculator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='burst, rate, queue size, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='burst, rate, queue size, calculator, pcq, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik PCQ Burst Rate + Queue Size Calculator By BuanaNET-Pbun">
