--- a/mikrotik-pcq-generator.html
+++ b/mikrotik-pcq-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik PCQ Generator For Queue Tree And Queue Simple - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik PCQ Generator For Queue Tree And Queue Simple - BuanaNETPBun.Github.io' name='description'>
-    <meta content='queue, pcq, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='queue, pcq, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik PCQ Generator For Queue Tree And Queue Simple By BuanaNET-Pbun">
