--- a/mikrotik-port-forward-generator.html
+++ b/mikrotik-port-forward-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik Port Forwarding With NAT Script Generator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik Port Forward (forwarding) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
-    <meta content='block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='Port Forward, nat, forwarding, script generator, mikrotik, router, winbox, termimal, rsc, script, ros' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik Port Forwarding Script Generator By BuanaNET-Pbun">
