--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik Port TCP/UDP Static Routing (Policy Based Routing) - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik Port TCP/UDP Static Routing (Policy Based Routing) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'>
-    <meta content='block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='static routing, pbr, Policy Based Routing, port, tcp, udp, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik Port TCP/UDP Static Routing (Policy Based Routing) By BuanaNET-Pbun">
