--- a/mikrotik-share-user-multi-login.html
+++ b/mikrotik-share-user-multi-login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Bandwidth Share For Hotspot Shared User Generator - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik Bandwidth Share For Hotspot Shared User Script Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='bandwidth, share, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Bandwidth Share For Hotspot Shared User Generator By BuanaNET-Pbun">
