--- a/mikrotik-username-password-ppp-generator.html
+++ b/mikrotik-username-password-ppp-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik PPP Secrets Username Password Generator - BuanaNETPBun.Github.io</title>
     <meta content='MikroTik Create PPP Secrets Username Password Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='PPP, Secrets, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
+    <meta content='PPP, Secrets, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik PPP Secrets Username Password Generator By BuanaNET-Pbun">
