--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Indonesia Time Zone NTP/SNTP Client MikroTik Generator - BuanaNETPBun.Github.io</title>
     <meta content='Indonesia Time Zone NTP/SNTP Client MikroTik Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='Time Zone, sntp, ntp, bonding, interface, link, aggregation, script, generator, mikrotik, router, winbox, termimal, rsc, scripts, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='Time Zone, sntp, ntp, script, generator, mikrotik, router, winbox, termimal, rsc, scripts' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Indonesia Time Zone NTP/SNTP Client MikroTik Generator By BuanaNET-Pbun">
