--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -5,7 +5,7 @@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport' >
     <title>Mikrotik Port Knocking Generator with Icmp + Packet Size - BuanaNETPBun.Github.io</title>
     <meta content='Mikrotik Port Knocking Generator with Icmp + Packet Size - BuanaNETPBun.Github.io' name='description' >
-    <meta content='port knocking, knock, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords' >
+    <meta content='port knocking, knock, icmp, packet size, script generator, mikrotik, router, winbox, termimal, rsc, script, secure' name='keywords' >
     <meta content='index, follow, noodp' name='robots' >
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Port Knocking Generator with Icmp + Packet Size By BuanaNET-Pbun">
