--- a/queue-tree-generator-shared.html
+++ b/queue-tree-generator-shared.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Queue Tree Script Generator For Mikrotik Plus Bandwidth Shared (UpTo) - BuanaNETPBun.Github.io</title>
     <meta content='Queue Tree Script Generator For Mikrotik - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='queue tree, queue, shared, upto, mikrotik, router, winbox, termimal, rsc, script, script generator' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Queue Tree Script Generator For Mikrotik Plus Bandwidth Shared (UpTo) By BuanaNET-Pbun">
