--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Open Remote Access ISP (Public IP Static) for MikroTik - BuanaNETPBun.Github.io</title>
     <meta content='Open Remote Access ISP (Public IP Static) for MikroTik - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='ip public, ip static, ip address, isp, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Open Remote Access ISP Public IP Static for MikroTik By BuanaNET-Pbun">
