--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Static Routing Games Script Generator For Mikrotik RouterOS - BuanaNETPBun.Github.io</title>
     <meta content='Static Routing Games Script Generator For Mikrotik RouterOS - BuanaNETPBun.Github.io' name='description'>
-    <meta content='game, routing, port, ip, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='game, routing, port, ip, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Static Routing Games Script Generator For Mikrotik RouterOS By BuanaNET-Pbun">
