--- a/vpn-tunnel-all-traffic-script-generator.html
+++ b/vpn-tunnel-all-traffic-script-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>VPN Tunnel All Traffic Script Generator For Mikrotik Routeros - BuanaNETPBun.Github.io</title>
     <meta content='VPN Tunnel All Traffic Script Generator For Mikrotik Routeros  - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='vpn, tunnel, traffic, script generator, mikrotik, router, winbox, termimal, rsc, script, routeros' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="VPN Tunnel All Traffic Script Generator By BuanaNET-Pbun">
