--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik Routeros - BuanaNETPBun.Github.io</title>
     <meta content='Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik Routeros - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, wms, sealess, wifi id, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='wms, sealess, wifi id, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, routeros' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik Routeros Routeros By BuanaNET-Pbun">
