--- a/simple-queue-generator-shared.html
+++ b/simple-queue-generator-shared.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mikrotik Simple Queue Script Generator For Bandwidth Shared (UpTo) - BuanaNETPBun.Github.io</title>
     <meta content='Simple Queue Script Generator For Mikrotik - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='simple queue, queue simple, queue, shared, bandwidth, upto, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Mikrotik Simple Queue Script Generator For Bandwidth Shared (UpTo) By BuanaNET-Pbun">
