--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vpn Game Script Generator For Mikrotik Routeros (Port Games) - BuanaNETPBun.Github.io</title>
     <meta content='Vpn Game Script Generator For Mikrotik Routeros (Port Games) - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='vpn, game, port game, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="Vpn Game Script Generator For Mikrotik (Port Game) By BuanaNET-Pbun">
