--- a/vpn-remote-generator.html
+++ b/vpn-remote-generator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>VPN Remote SSTP - L2TP - PPTP - OVPN Mikrotik Generator - BuanaNETPBun.Github.io</title>
     <meta content='VPN Remote SSTP - L2TP - PPTP - OVPN Mikrotik Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='remote, vpn, sstp, l2tp, pptp, ovpn, script generator, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="VPN Remote SSTP - L2TP - PPTP - OVPN Mikrotik Generator By BuanaNET-Pbun">
