--- a/login/index.html
+++ b/login/index.html
@@ -4,9 +4,16 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MEMBER PROFILE - BuanaNETPBun.Github.io</title>
-    <meta content='Mikrotik RouterOS Auto Backup to E-Mail Generator - BuanaNETPBun.Github.io' name='description'>
-    <meta content='hotspot, username, password, script generator, mikrotik, router, winbox, termimal, rsc, script, wireless, rtrwnet' name='keywords'>
+    <meta content='Login Member Profiles - BuanaNETPBun.Github.io' name='description'>
+    <meta content='login, member, username, password, mikrotik, router, winbox, termimal, rsc, script, routeros' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
+    <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Login Member Profiles - BuanaNETPBun.Github.io">
+    <meta property="og:description" content="Login Member Profiles - BuanaNETPBun.Github.io">
+    <meta property="og:image" content="https://github-production-user-asset-6210df.s3.amazonaws.com/42666125/264986691-0448a41f-10d0-4352-9810-2fd5afe9c2bb.png">
+    <meta property="og:image:alt" content="Login Member Profiles - BuanaNETPBun.Github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://buananetpbun.github.io/login">
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">	
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
     <link rel="stylesheet" href="./index.css">
