--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MikroTik Script RouterOS DataBase - BuanaNETPBun.Github.io</title>
     <meta content='Complete MikroTik RouterOS Script DataBase Unoffical, Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!' name='description'>
-    <meta content='RouterOS, Mikrotik Script, load balancing, pcc, LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'>
+    <meta content='RouterOS, Mikrotik Script, database, search script, mikrotik, router, winbox, termimal, rsc, script' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <meta property="og:title" content="MikroTik RouterOS Script - BuanaNETPBun">
