--- a/mikrotik-static-routing.html
+++ b/mikrotik-static-routing.html
@@ -122,19 +122,19 @@
           <li><a href="javascript:callmodal()">DONATE</a></li>
           <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
         </ul>
-        <div class="show-homepage-menu">
-          <div id="homepage" class="hide">
-            <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-            <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-            <span class="hide-homepage">
-            <span class="avatar">
-            <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
-            </span>		
-            <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-            <span style="font-weight:normal; font-size:14px"> [<span class="tooltip"><span class="tooltiptext2">E-mail verified status</span><span id="email_Verified" style="cursor:help"></span></span>]</span>
-            </span>
-          </div>
+      <div class="show-homepage-menu">
+        <div id="homepage" class="hide">
+          <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <span class="hide-homepage">
+          <span class="avatar">
+          <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
+          </span>		
+          <span style="font-weight:normal;font-size:14px"><a href="https://buananetpbun.github.io/login"><img style="vertical-align:middle" width="20" src="./img/gear.png"><span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></a></span>
+          <span style="font-weight:normal; font-size:14px"> [<span class="tooltip"><span class="tooltiptext2">E-mail verified status</span><span id="email_Verified" style="cursor:help"></span></span>]</span>
+          </span>
         </div>
+      </div>
       </div>
       <div class="logo">
         <div class="logo-right" style="float:right;">
