--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -684,6 +684,7 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>
-    <script src="./login/login.js"></script>	
+    <script src="./login/login.js"></script>
+<script async data-watzapkey="prV51372" src="https://cdn.watzap.id/widget-api.js"></script>		
   </body>
 </html>
