--- a/mikrotik-mangle-script-obfuscator.html
+++ b/mikrotik-mangle-script-obfuscator.html
@@ -302,7 +302,6 @@
       </div>
     </div>
     <script src="./login/login.js"></script>	
-    <script>
-    </script>
+<script async data-watzapkey="prV51372" src="https://cdn.watzap.id/widget-api.js"></script>	
   </body>
 </html>
