--- a/mikrotik-static-routing.html
+++ b/mikrotik-static-routing.html
@@ -182,6 +182,7 @@
               <option value="Lazada">Lazada</option>
               <option disabled value="">----------- Video Conperence</option>
               <option value="Zoom">Zoom Meeting</option>
+              <option value="Teams">Microsoft Teams</option>			  
               <option disabled value="">----------- Other List IP</option>
               <option value="Speedtest">Speedtest</option>
               <option value="GGC">GGC (Google Global Cache)</option>
