--- a/mikrotik-static-routing.html
+++ b/mikrotik-static-routing.html
@@ -183,7 +183,7 @@
               <option disabled value="">----------- Video Conperence</option>
               <option value="Zoom">Zoom Meeting</option>
               <option value="Teams">Microsoft Teams</option>
-              <option value="Teams">Google Meet</option>			  
+              <option value="Meet">Google Meet</option>			  
               <option disabled value="">----------- Other List IP</option>
               <option value="Speedtest">Speedtest</option>
               <option value="GGC">GGC (Google Global Cache)</option>
