--- a/mikrotik-static-routing.html
+++ b/mikrotik-static-routing.html
@@ -185,6 +185,8 @@
               <option value="Teams">Microsoft Teams</option>
               <option value="Meet">Google Meet</option>			  
               <option disabled value="">----------- Other List IP</option>
+              <option value="Meta">Meta</option>
+              <option value="Google">Google</option>			  
               <option value="Speedtest">Speedtest</option>
               <option value="GGC">GGC (Google Global Cache)</option>
               <option value="NICE-OIXP">Nice IIX or OIXP</option>
