--- a/mikrotik-static-routing.html
+++ b/mikrotik-static-routing.html
@@ -189,7 +189,7 @@
               <option value="Google">Google</option>			  
               <option value="Speedtest">Speedtest</option>
               <option value="GGC">GGC (Google Global Cache)</option>
-              <option value="NICE-OIXP">Nice IIX or OIXP</option>
+              <option value="NICE-OIXP">Nice IIX or OIXP (indonesia)</option>
               <option value="Bank-Indonesia">All Indonesian Bank</option>
             </select>
           </div>
