--- a/mikrotik-static-routing.html
+++ b/mikrotik-static-routing.html
@@ -214,7 +214,7 @@
         <div class='list-output-content' id="list-output-content" style="font-size:13px;">
           <span style="color:green">## STEP 1 - Copy Paste to Terminal</span><br>
           /file remove "<span style="color:#ff6600">Mikrotik-<span id='remove1'>Youtube</span>.rsc</span>"<br>
-          /tool fetch url="https://raw.githubusercontent.com/buananetpbun/mikrotik-routeros/main/<span style="color:#ff6600">Mikrotik-<span id='tool-fetch'>Youtube</span>.rsc</span>" dst-path="<span style="color:#ff6600">Mikrotik-<span id="dst-path">Youtube</span>.rsc</span>"<br>
+          /tool fetch url="https://raw.githubusercontent.com/buananetpbun/buananetpbun.github.io/main/mikrotik/mikrotik-routeros-rsc/<span style="color:#ff6600">Mikrotik-<span id='tool-fetch'>Youtube</span>.rsc</span>" dst-path="<span style="color:#ff6600">Mikrotik-<span id="dst-path">Youtube</span>.rsc</span>"<br>
         </div>
         <button style="float:right; margin-top:10px; margin-bottom:10px; font-weight:bold;font-size:13px" type="button" onclick="selectElementContents(document.getElementById('list-output-content2'))">Copy STEP 2</button>		
         <div class='list-output-content2' id="list-output-content2" style="font-size:13px;">
