--- a/mikrotik-mangle-script-obfuscator.html
+++ b/mikrotik-mangle-script-obfuscator.html
@@ -201,7 +201,7 @@
           <button style="margin-left:7px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('list-output-content'))">Copy Script</button>
         </div>
         <div class='list-output-content' id="list-output-content" style="font-size:13px;">
-            <span style="color:#ff6600;display:none">
+            <span style="color:#ff6600;">
             ###############################################<br>
             # Mikrotik Firewall Mangle Chain Obfuscator / Encryption<br>
              # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
