--- a/index.html
+++ b/index.html
@@ -242,16 +242,17 @@
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Failover Recursive Gateway</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/static-routing-games.html">Games Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>		   
            <p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-local-ip-pbr.html">Local Client IP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>	   
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-local-ip-pbr.html">Local Client IP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>	
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding with NAT</a><img alt="member-only" class="member-only" src="./img/user.png"></p>		   
           </div>
-          <div class="column">
-           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-forward-generator.html">Port Forwarding with NAT</a><img alt="member-only" class="member-only" src="./img/user.png"></p>		  
+          <div class="column">  
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">All Traffic to VPN Tunnel</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/remote-ip-public-static.html">Remote Access ISP "Public IP Static"</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator.html">VPN Routing Port Games</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-game-generator2.html">VPN Routing IP Address Games</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-remote-generator.html">VPN Remote SSTP - L2TP - PPTP - OVPN</a><img alt="member-only" class="member-only" src="./img/user.png"></p> 
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-static-routing.html"><s>Static Routing Youtube, Tiktok, FB, WA, etc.</s></a><img alt="member-only" class="member-only" src="./img/user.png"></p>		  
 		  </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600; ">☰ SIMPLE QUEUE <span style="color:#ff6600">//</span> QUEUE TREE <span style="color:#ff6600">//</span> QUEUE TYPE</span></div>
@@ -259,12 +260,13 @@
           <div class="column">
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-burst-rate-queue-size-generator.html">PCQ Burst Rate + Queue Size Calculator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-           <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator.html">Simple Queue + Tocken Bucket</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+           <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator.html">Simple Queue + Tocken Bucket</a><img alt="member-only" class="member-only" src="./img/user.png"></p>	
+           <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared Up-To</a><img alt="member-only" class="member-only" src="./img/user.png"></p>		   
           </div>
           <div class="column">
-           <p><a target="_blank"  href="https://buananetpbun.github.io/simple-queue-generator-shared.html">Simple Queue + Bandwidth Shared Up-To</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared Up-To</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-queue-qos.html"><s>QoS Priority Youtube, Tiktok, WA, FB, etc.</s></a><img alt="member-only" class="member-only" src="./img/user.png"></p> 		   
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE <span style="color:#ff6600">//</span> PPP</span></div>
@@ -301,7 +303,8 @@
           </div>
           <div class="column">
            <p><a target="_blank"  href="https://buananetpbun.github.io/port-knocking-icmp.html">Port Knocking with ICMP + Packet Size</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>     
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-block-website-generator.html">Block Websites Generator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>  
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-mangle-script-obfuscator.html"><s>Mangle Chain Obfuscator / Encryption</s></a><img alt="member-only" class="member-only" src="./img/user.png"></p> 		   
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ ROUTER-OS OTHER TOOLS</span></div>
