--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="column">   
             <p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">Burst Limit Calculator</a><img alt="member-only" class="member-only" src="./img/user.png"></p>	
-           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard from ISP</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			   
+           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-hide-my-router-from-isp.html">MikroTik Ninja: Hide Routerboard Scanning</a><img alt="member-only" class="member-only" src="./img/user.png"></p>			   
           </div>
           <div class="column">  
            <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html">MikroTik Auto Backup to E-Mail</a><img alt="member-only" class="member-only" src="./img/user.png"></p>		  
